@@ -18,6 +18,7 @@ CHANGELOG
 * Added redirect to login page on student settings page for non-logged users.
 * Fixed issue with not showing HTML tags in Multiple/Single Choice field.
 * Updated included Market Press version 3.2.3
+* Added "Number of failed attempts".
 
 = 2.0.5 =
 -------------------------------------------------
